--- a/renderer/pom.xml
+++ b/renderer/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>renderer</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>_3Dapi</groupId>
+            <artifactId>init</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
