--- a/game/pom.xml
+++ b/game/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>init</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>_3Dapi</groupId>
+            <artifactId>calculate</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
