--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>${lwjgl.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.joml</groupId>
+            <artifactId>joml</artifactId>
+            <version>1.9.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-bgfx</artifactId>
             <version>${lwjgl.version}</version>
