--- a/init/pom.xml
+++ b/init/pom.xml
@@ -22,4 +22,12 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>_3Dapi</groupId>
+            <artifactId>calculate</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
