--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,6 @@
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
-            <artifactId>lwjgl-openal</artifactId>
-            <version>${lwjgl.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-opengl</artifactId>
             <version>${lwjgl.version}</version>
         </dependency>
@@ -104,6 +99,13 @@
             <classifier>${lwjgl.natives}</classifier>
 
         </dependency>
+
+        <dependency>
+            <groupId>org.urish.openal</groupId>
+            <artifactId>java-openal</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-bgfx</artifactId>
